--- a/View/Chinh_sua_thong_tin.xaml
+++ b/View/Chinh_sua_thong_tin.xaml
@@ -7,7 +7,6 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-              Background="{DynamicResource MaterialDesignPaper}"
       FontFamily="{DynamicResource MaterialDesignFont}"
       TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       TextElement.FontWeight="Regular"
@@ -18,19 +17,20 @@
 WindowStyle="None"
       Name="CDHCView"
       WindowStartupLocation="Manual"
-        Title="Chinh_sua_thong_tin" Height="750" Width="1100">
-    <Grid Background="pink">
-        <Border Height="443" CornerRadius="15" Margin="361,0,360,0" VerticalAlignment="Center" >
+        Title="Chinh_sua_thong_tin" Height="770" Width="1165" Background="#FFBE3C3C">
+    <Grid>
+
+        <Border Height="443" CornerRadius="15" Margin="0,0,360,0" VerticalAlignment="Center" HorizontalAlignment="Right" Width="379" >
             <Border.Background>
                 <SolidColorBrush Color="White" Opacity="0.5"/>
             </Border.Background>
             <Grid>
 
                 <TextBlock Text= " Thông Tin Tài Khoản" Height="41" Width="320" Margin="30,30,30,0"
-                           FontSize="30" FontFamily="Segoe UI Black" VerticalAlignment="Top" Foreground="ForestGreen"
+                           FontSize="30" FontFamily="Segoe UI Black" VerticalAlignment="Top" Foreground="#FF545353"
                     >
                 </TextBlock>
-                <Border Height="50" Background="ForestGreen" CornerRadius="10" Margin="39,0,40,285" VerticalAlignment="Bottom" >
+                <Border Height="50" Background="Gray" CornerRadius="10" Margin="39,0,40,285" VerticalAlignment="Bottom" >
                     <Grid Margin="0 0 0 0">
                         <materialDesign:PackIcon Kind="AccountCircle"  VerticalAlignment="Center" Height="40" Width="40" Margin="5,0,0,0" Foreground="White" />
                         <Border Padding="0" CornerRadius="0 10 10 0" Background="White" Height="50" Width="250" HorizontalAlignment="Right" >
@@ -44,7 +44,7 @@ WindowStyle="None"
                     </Grid>
                 </Border>
 
-                <Border Height="50" Width="300" Background="ForestGreen" CornerRadius="10" Margin="0,0,0,220" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
+                <Border Height="50" Width="300" Background="Gray" CornerRadius="10" Margin="0,0,0,220" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
                     <Grid Margin="0 0 0 0">
                         <materialDesign:PackIcon Kind="Email"  VerticalAlignment="Center" Height="40" Width="40" Margin="5,0,0,0" Foreground="White" />
                         <Border Padding="0" CornerRadius="0 10 10 0" Background="White" Height="50" Width="250" HorizontalAlignment="Right" >
@@ -58,7 +58,7 @@ WindowStyle="None"
                     </Grid>
                 </Border>
 
-                <Border Height="50" Width="300" Background="ForestGreen" CornerRadius="10" Margin="0,0,0,153" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
+                <Border Height="50" Width="300" Background="Gray" CornerRadius="10" Margin="0,0,0,153" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
                     <Grid Margin="0 0 0 0">
                         <materialDesign:PackIcon Kind="Key"  VerticalAlignment="Center" Height="40" Width="40" Margin="5,0,0,0" Foreground="White" />
                         <Border Padding="0" CornerRadius="0 10 10 0" Background="White" Height="50" Width="250" HorizontalAlignment="Right" >
@@ -72,7 +72,7 @@ WindowStyle="None"
                     </Grid>
                 </Border>
 
-                <Border Height="50" Width="300" Background="ForestGreen" CornerRadius="10" Margin="0,0,0,87" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
+                <Border Height="50" Width="300" Background="Gray" CornerRadius="10" Margin="0,0,0,87" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
                     <Grid Margin="0 0 0 0">
                         <materialDesign:PackIcon Kind="MapMarkerRadius"  VerticalAlignment="Center" Height="40" Width="40" Margin="5,0,0,0" Foreground="White" />
                         <Border Padding="0" CornerRadius="0 10 10 0" Background="White" Height="50" Width="250" HorizontalAlignment="Right" >
@@ -91,7 +91,7 @@ WindowStyle="None"
                         <TextBlock Text="Vai Trò:" Margin="10,14,79,6" FontSize="20" Foreground="Gray" />
                         <TextBlock Text="{Binding loaitaikhoan}" Margin="80,14,9,6" FontSize="20" TextAlignment="Center" />
                     </Grid>
-                    
+
                 </Border>
 
                 <Button
@@ -101,8 +101,8 @@ WindowStyle="None"
                     materialDesign:RippleAssist.Feedback="#DD000000" Margin="219,0,0,17" 
                     Content="Xác Nhận" FontSize="17" 
                     FontFamily="Segoe UI Black" Foreground="#DDFFFFFF" Height="53" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="119" Background="#FF0C8329" BorderBrush="{x:Null}"/>
-                
-                
+
+
             </Grid>
         </Border>
     </Grid>
