--- a/View/CapDoHanhChinhView.xaml
+++ b/View/CapDoHanhChinhView.xaml
@@ -27,9 +27,7 @@
             <RowDefinition Height="272*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
-            <uc:ControllBarUC Tag="{Binding Title, ElementName=CDHCView}"></uc:ControllBarUC>
-        </Grid>
+        <Grid Grid.Row="0"/>
         <Grid Grid.Row="1" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -38,12 +36,12 @@
             </Grid.RowDefinitions>
             <!-- Title -->
             <TextBlock Grid.Row="0" Text="Quản lý cấp hành chính" 
-                   FontSize="28" FontWeight="Bold" 
+                   FontSize="30" FontWeight="Bold" 
                    HorizontalAlignment="Center"
-                   Foreground="ForestGreen" Margin="10" />
+                   Foreground="White" Margin="20" />
 
             <!-- Toolbar -->
-            <materialDesign:Card Grid.Row="1" Padding="10">
+            <materialDesign:Card Grid.Row="1" Padding="10" Margin="20 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -99,7 +97,7 @@
             </materialDesign:Card>
 
             <!-- List View to display Data -->
-            <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
+            <materialDesign:Card Grid.Row="2" Margin="20 " VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView  ItemsSource="{Binding CapDoList}" 
                           SelectedItem="{Binding SelectedCapDo, Mode=TwoWay}" 
