--- a/View/CayTrongView.xaml
+++ b/View/CayTrongView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource CTVM}"
-        Background="{DynamicResource MaterialDesignPaper}"
+        Background="#FFBD4141"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -18,16 +18,14 @@
         WindowStyle="None"
         WindowStartupLocation="Manual"
         Name="CTView"
-        Title="Quản lý giống cây trồng" Height="600" Width="900">
+        Title="Quản lý giống cây trồng" Height="770" Width="1165">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <uc:ControllBarUC Tag="{Binding Title, ElementName=CTView}"></uc:ControllBarUC>
-        </Grid>
+        <Grid Grid.Row="0"/>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -39,10 +37,10 @@
             <TextBlock Grid.Row="0" Text="Quản lý giống cây trồng" 
                    FontSize="28" FontWeight="Bold" 
                    HorizontalAlignment="Center" 
-                   Foreground="DarkGreen" Margin="10"/>
+                   Foreground="White" Margin="20"/>
 
             <!-- Toolbar -->
-            <materialDesign:Card Grid.Row="1" Padding="10">
+            <materialDesign:Card Grid.Row="1" Padding="10" Margin="20 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -140,7 +138,7 @@
             </materialDesign:Card>
 
             <!-- List View to display Data -->
-            <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
+            <materialDesign:Card Grid.Row="2" Margin="20" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView ItemsSource="{Binding GiongCayTrongList}" x:Name="ListViewControll"
                           SelectedItem="{Binding SelectedGiongCayTrong, Mode=TwoWay}" 
