--- a/View/LichSuTruyCapView.xaml
+++ b/View/LichSuTruyCapView.xaml
@@ -11,16 +11,14 @@
         WindowStyle="None"
         WindowStartupLocation="Manual"
         Name="LSTCView"
-        Title="Quản lý Lịch Sử Truy Cập" Height="600" Width="1000"
-        Background="#F0F4F8">
+        Title="Quản lý Lịch Sử Truy Cập" Height="770" Width="1165"
+        Background="#FF5290CE">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <uc:ControllBarUC Tag="{Binding Title, ElementName=LSTCView}"></uc:ControllBarUC>
-        </Grid>
+        <Grid Grid.Row="0"/>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -32,10 +30,10 @@
             <TextBlock Grid.Row="0" Text="Quản lý Lịch Sử Truy Cập"
                    FontSize="28" FontWeight="Bold"
                    HorizontalAlignment="Center"
-                   Foreground="#5E35B1" Margin="10"/>
+                   Foreground="White" Margin="20"/>
 
             <!-- Toolbar -->
-            <materialDesign:Card Grid.Row="1" Padding="10" Margin="0,10,0,0">
+            <materialDesign:Card Grid.Row="1" Padding="10" Margin="20 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -43,7 +41,8 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- Trường tìm kiếm -->
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="10,0,512,0">
+                        <materialDesign:PackIcon Kind="Magnify" Height="30" Width="30" VerticalAlignment="Bottom" Foreground="Gray" />
                         <TextBox Text="{Binding SearchText}"
                              Margin="5"
                              Width="300"
@@ -55,16 +54,16 @@
                     <!-- Nút chức năng -->
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Command="{Binding SearchCommand}" Content="Tìm kiếm"
-                            Margin="5" Width="100" Background="#66BB6A" Foreground="White"/>
+                            Margin="5" Width="100" Background="DarkGreen" BorderBrush="black" Foreground="White"/>
 
                         <Button Command="{Binding ClearCommand}" Content="Xóa"
-                            Margin="5" Width="100" Background="#FF8A65" Foreground="White"/>
+                            Margin="5" Width="100" Background="DarkOrange" BorderBrush="black" Foreground="White"/>
                     </StackPanel>
                 </Grid>
             </materialDesign:Card>
 
             <!-- Bảng danh sách -->
-            <materialDesign:Card Grid.Row="2" Margin="0,10,0,0">
+            <materialDesign:Card Grid.Row="2" Margin="20">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <DataGrid ItemsSource="{Binding LSTCList}"
                           SelectedItem="{Binding SelectedLichSuTruyCap}"
