--- a/View/QuanLyNguoiDungView.xaml
+++ b/View/QuanLyNguoiDungView.xaml
@@ -10,17 +10,15 @@
                 ResizeMode="NoResize"
         WindowStyle="None"
         WindowStartupLocation="Manual"
-        Title="Quản lý Người Dùng" Height="600" Width="1000"
+        Title="Quản lý Người Dùng" Height="770" Width="1165"
         Name="QLNDView"
-        Background="#F0F4F8">
+        Background="#FF6FAAE5">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <uc:ControllBarUC Tag="{Binding Title, ElementName=QLNDView}"></uc:ControllBarUC>
-        </Grid>
+        <Grid Grid.Row="0"/>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -32,10 +30,10 @@
             <TextBlock Grid.Row="0" Text="Quản lý Người Dùng"
                    FontSize="28" FontWeight="Bold"
                    HorizontalAlignment="Center"
-                   Foreground="#5E35B1" Margin="10"/>
+                   Foreground="White" Margin="20"/>
 
             <!-- Toolbar -->
-            <materialDesign:Card Grid.Row="1" Padding="10" Margin="0,10,0,0">
+            <materialDesign:Card Grid.Row="1" Padding="10" Margin="20 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -111,18 +109,18 @@
                     <!-- Nút chức năng -->
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Command="{Binding SearchCommand}" Content="Tìm kiếm"
-                     Margin="5" Width="100" Background="#66BB6A" Foreground="White" materialDesign:ButtonProgressAssist.IsIndeterminate="True"
+                     Margin="5" Width="100" Background="DarkBlue" Foreground="White" BorderBrush="Black" materialDesign:ButtonProgressAssist.IsIndeterminate="True"
                     materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
                         <Button Command="{Binding EditCommand}" Content="Sửa"
-                            Margin="5" Width="100" Background="#FF8A65" Foreground="White"/>
+                            Margin="5" Width="100" Background="DarkOrange" BorderBrush="Black" Foreground="White"/>
                         <Button Command="{Binding DeleteCommand}" Content="Xóa"
-                            Margin="5" Width="100" Background="#E53935" Foreground="White"/>
+                            Margin="5" Width="100" Background="DarkRed" BorderBrush="Black" Foreground="White"/>
                     </StackPanel>
                 </Grid>
             </materialDesign:Card>
 
             <!-- Bảng danh sách -->
-            <materialDesign:Card Grid.Row="2" Margin="0,10,0,0">
+            <materialDesign:Card Grid.Row="2" Margin="20">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <DataGrid ItemsSource="{Binding NguoiDungList}"
                           SelectedItem="{Binding SelectedNguoiDung, Mode=TwoWay}"
