--- a/View/VungTrongView.xaml
+++ b/View/VungTrongView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource VTVM}"
-        Background="{DynamicResource MaterialDesignPaper}"
+        Background="#FFA62828"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -18,16 +18,14 @@
         WindowStyle="None"
         WindowStartupLocation="Manual"
         Name="VTView"
-        Title="Quản lý vùng trồng" Height="600" Width="900">
+        Title="Quản lý vùng trồng" Height="770" Width="1165">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <uc:ControllBarUC Tag="{Binding Title, ElementName=VTView}"></uc:ControllBarUC>
-        </Grid>
+        <Grid Grid.Row="0"/>
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
@@ -39,10 +37,10 @@
             <TextBlock Grid.Row="0" Text="Quản lý vùng trồng" 
                    FontSize="28" FontWeight="Bold" 
                    HorizontalAlignment="Center" 
-                   Foreground="MediumSeaGreen" Margin="10"/>
+                   Foreground="White" Margin="20"/>
 
             <!-- Toolbar -->
-            <materialDesign:Card Grid.Row="1" Padding="10">
+            <materialDesign:Card Grid.Row="1" Padding="10" Margin="20">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -100,34 +98,32 @@
                         Content="Tìm kiếm" 
                         Margin="5" 
                          Width="100" 
-                         Background="MediumSeaGreen"  
-                         materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
-                         materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
+                         Background="DarkBlue" BorderBrush="black"  
+                         Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding AddCommand}" 
                             Content="Thêm" 
                             Margin="5" 
                             Width="100" 
-                            Background="Pink"  
-                            materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
-                            materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
+                            Background="DarkGreen"  BorderBrush="black"  
+                            Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding EditCommand}" 
                             Content="Sửa" 
                             Margin="5" 
                             Width="100" 
-                            Background="DarkOrange" 
+                            Background="DarkOrange" BorderBrush="black"  
                             Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding DeleteCommand}" 
                             Content="Xóa" 
                             Margin="5"
                             Width="100" 
-                            Background="DarkRed"
+                            Background="DarkRed" BorderBrush="black"  
                             Style="{StaticResource MaterialDesignRaisedButton}"/>
                     </StackPanel>
                 </Grid>
             </materialDesign:Card>
 
             <!-- Data Table -->
-            <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
+            <materialDesign:Card Grid.Row="2" Margin="20" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView ItemsSource="{Binding VungTrongList}" x:Name="ListViewControll"
                           SelectedItem="{Binding SelectedVungTrong, Mode=OneWayToSource}" 
@@ -139,8 +135,8 @@
                                 <GridViewColumn Width="170">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
-                                            <Border Background="MediumSeaGreen" Padding="5" CornerRadius="10,10,0,0">
-                                                <TextBlock Text="ID" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                            <Border  Padding="5" CornerRadius="10,10,0,0">
+                                                <TextBlock Text="ID" Foreground="black" FontWeight="Bold" TextAlignment="Center" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
@@ -157,8 +153,8 @@
                                 <GridViewColumn Width="250">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
-                                            <Border Background="MediumSeaGreen" Padding="5" CornerRadius="10,10,0,0">
-                                                <TextBlock Text="Tên vùng trồng" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                            <Border  Padding="5" CornerRadius="10,10,0,0">
+                                                <TextBlock Text="Tên vùng trồng" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
@@ -175,8 +171,8 @@
                                 <GridViewColumn Width="250">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
-                                            <Border Background="MediumSeaGreen" Padding="5" CornerRadius="10,10,0,0">
-                                                <TextBlock Text="Mô tả" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                            <Border  Padding="5" CornerRadius="10,10,0,0">
+                                                <TextBlock Text="Mô tả" Foreground="Black" FontWeight="Bold" TextAlignment="Center" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
@@ -193,8 +189,8 @@
                                 <GridViewColumn Width="220">
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
-                                            <Border Background="MediumSeaGreen" Padding="5" CornerRadius="10,10,0,0">
-                                                <TextBlock Text="Mã vùng trồng" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                            <Border Padding="5" CornerRadius="10,10,0,0">
+                                                <TextBlock Text="Mã vùng trồng" Foreground="black" FontWeight="Bold" TextAlignment="Center" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
